# pylsp-inlay-hints

./: .gitignore  AUTHORS.txt  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yaml  release.yaml
pylsp_inlay_hints/: dispatcher.py  extractor.py  interfaces.py  plugin.py
