
[metadata]
name = pylsp_inlay_hints
version = 0.1
author = Marcin Paliwoda
author_email = paliwoda.marcin@zoho.com
url = https://github.com/mpaliwoda/pylsp-inlay-hints
description = Inlay hints plugin for PyLSP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License


[options]

packages = find:

install_requires = 
    python-lsp-server
    astroid
    astypes

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_inlay_hints = pylsp_inlay_hints.plugin
